<resources>
    <string name="app_name">PixMan</string>
    <string name="action_settings">Settings</string>
    <string name="label_brush">Brush</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
</resources>
