...
        android:padding="8dp"
        android:src="@drawable/ic_redo"
        app:layout_constraintBottom_toTopOf="@+id/rvConstraintTools"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="8dp"
        android:src="@drawable/ic_close"
...
